--- a/performance-analysis/02-actuator/doc/01-init-of-actuator/01-init-of-actuator.adoc
+++ b/performance-analysis/02-actuator/doc/01-init-of-actuator/01-init-of-actuator.adoc
@@ -12,7 +12,6 @@
 :experimental:
 :icons: font
 
-
 [preface]
 == 前言
 
@@ -23,21 +22,10 @@ https://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-
 
 https://yufarui.additor.io/page/zLDyGGTDwDZX/addit/oMxeP7fDGm[additor-学习记录]
 
-== 任务
-Prometheus + Grafana 监控 SpringBoot
-https://zhuanlan.zhihu.com/p/106036485[搭建文章]
-
 == Micrometer
 
 https://micrometer.io/docs/concepts[micrometer-相关概念]
 
-[glossary]
-Meter ::
-	收集度量结果的接口
-
-MeterRegistry::
-	Meter的注册中心.默认spring-实例:SimpleMeterRegistry
-
-
-
-
+== 搭建监控管理服务
+Prometheus + Grafana 监控 SpringBoot
+https://zhuanlan.zhihu.com/p/106036485[搭建文章]
