--- a/performance-analysis/03-jdk-tool/doc/01-类加载机制.adoc
+++ b/performance-analysis/03-jdk-tool/doc/01-类加载机制.adoc
@@ -27,78 +27,32 @@ java [<packageName>.]<className>
 java -jar <jarName>.jar
 ----
 
-.流程步骤的修改和创建
-[plantuml,01-image/java_start.png,width=60%]
---
-@startuml
+流程步骤的修改和创建::
+image::01-image/java_start.png[600,400]
 
-:使用java命令执行代码;
-
-fork
-->1.创建classLoader;
-#aqua:windows环境,jdk/bin/java.exe调用底层
-jvm.dll创建jvm虚拟机,linxu下为libjvm.so;
-
-#aquamarine:jvm通过c++创建BootstrapClassLoader,
-并由此classLoader创建其他类加载器;
-
-detach
-fork again
-
-->2.创建class;
-#orange:由类加载器,加载所需的类;
-
-#pink:执行程序Main方法;
-
-#pink:运行结束,销毁jvm;
-
-detach
-forkend
-
-@enduml
---
-
-[NOTE]
+[TIP]
 ====
 使用kbd:[locate libjvm.so]
 可以快速地在linux下找到文件
 ====
 
 == classLoader的加载过程
-https://blog.csdn.net/chaofanwei2/article/details/51335278[Launch-初始化过程-参考]
+
+参考阅读-Launch-初始化过程::
+https://blog.csdn.net/chaofanwei2/article/details/51335278[]
 
 .类加载器初始化
-[plantuml,01-image/launcher_init.png,width=60%]
---
-@startuml
-
-#orange:Classloader#initSystemClassLoader;
-->1.获取初始系统类加载器;
-#orangered:Launcher#getLauncher;
-->2.Launcher初始化,并依次加载类加载器;
-#aquamarine:加载ExtClassLoader;
-note right
-System.getProperty("java.ext.dirs");
-end note
-#aquamarine:加载AppClassLoader;
-note right
-System.getProperty("java.class.path");
-end note
-@enduml
---
+image::01-image/launcher_init.png[600,400]
 
 [TIP]
 ====
 String javaClassPath = System.getProperty("java.class.path");
-
 你可以从java.class.path下拿到应用程序所属的类
-
 ====
 
 ====
 [source,java]
 ----
-
 /**
  * 类加载时，设置了ContextClassLoader
  */
@@ -117,50 +71,16 @@ private Thread(...) {<2>
     else
         this.contextClassLoader = parent.contextClassLoader;
     ...
+}
 ----
-<1>java会在线程中设置线程上下文类加载器
-<1>子线程通过构造函数会继承父线程的contextClassLoader
+<1> java会在线程中设置线程上下文类加载器
+<2> 子线程通过构造函数会继承父线程的contextClassLoader
 ====
 
 == 类加载机制
 https://juejin.cn/post/6844903564804882445[类加载机制-参考]
 
-[plantuml,01-image/load_class_process.png]
---
-@startmindmap
-<style>
-mindmapDiagram {
-    rootNode {
-        BackgroundColor lightBlue
-    }
-    :depth(1) {
-      BackGroundColor white
-    }
-    :depth(2) {
-        BackgroundColor lightGreen
-    }
-    :depth(3) {
-        BackgroundColor pink
-    }
-}
-</style>
-
-* 类的加载过程
-** 加载
-*** 查找和导入Class文件\n使用时加载
-** 链接
-*** 把类的二进制数据合并到JRE中
-*** 验证
-**** 检查载入Class文件数据的正确性
-*** 准备
-**** 给类的静态变量分配内存，并赋予默认值
-*** 解析
-**** 符号引用转为直接引用\n静态方法(static method)转换为静态链接
-** 初始化
-*** 对类的静态变量初始化为指定的值，执行静态代码块
-
-@endmindmap
---
+image::01-image/load_class_process.png[600,400]
 
 .加载阶段
 ****
@@ -169,7 +89,7 @@ mindmapDiagram {
 
 == 双亲委托与类的加载
 
-推荐阅读::
+推荐阅读-Tomcat类加载器::
 https://juejin.cn/post/6844903550300979214[]
 
 SPI的理解::
@@ -183,6 +103,6 @@ https://www.cnblogs.com/xrq730/p/11440174.html[]
 
 不同目录下的jar包的共享与隔离
 
-image::01-image/tomcat_class_loader.png[]
+image::01-image/tomcat_class_loader.png[800,600]
 
 
