--- a/performance-analysis/03-jdk-tool/doc/02-对象的创建与内存分配.adoc
+++ b/performance-analysis/03-jdk-tool/doc/02-对象的创建与内存分配.adoc
@@ -16,55 +16,28 @@ pass:[<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-a
 
 = 对象的创建
 
-推荐阅读::
+推荐阅读-Java对象的创建过程::
 https://blog.csdn.net/justloveyou_/article/details/72466416[]
 
-
 .对象的创建
-[plantuml,02-image/create_object.png]
---
-@startmindmap
-<style>
-mindmapDiagram {
-    rootNode {
-        BackgroundColor lightBlue
-    }
-    :depth(1) {
-      BackGroundColor white
-    }
-    :depth(2) {
-        BackgroundColor lightGreen
-    }
-    :depth(3) {
-        BackgroundColor pink
-    }
-}
-</style>
-
-* 对象的创建
-** 类加载检查,若类未加载则先加载类
-** 分配内存
-** 初始化
-** 设置对象头
-** 执行<init>方法,属性赋值
-
-@endmindmap
---
+image::02-image/create_object.png[600,400]
 
 == 对象的创建时机
 
 .对象的创建时机
-****
+[sorce]
+----
 - new 创建对象
 - 反射机制 
 * 使用Class类的newInstance方法(反射机制)
 * 使用Constructor类的newInstance方法(反射机制)
 - 使用clone(浅克隆/深克隆机制)
 - 使用(反)序列化机制
-****
+----
+
 
 序列化机制推荐阅读::
-https://www.liaoxuefeng.com/wiki/1252599548343744/1298366845681698
+https://www.liaoxuefeng.com/wiki/1252599548343744/1298366845681698[]
 
 [TIP]
 ====
@@ -81,7 +54,6 @@ public class StaticTest {
 按照代码顺序,b的初始化在 st实例之后,故b=0;
 ====
 
-
 [TIP]
 ====
 我们可以使用
@@ -95,7 +67,8 @@ invokespecial 预设调用构造器链
 ====
 
 == 分配内存
-推荐阅读::
+
+推荐阅读-对象的分配::
 https://www.cnblogs.com/myseries/p/12884249.html[]
 
 === 对象如何分配
@@ -118,8 +91,7 @@ TLAB(Thread Local Allocation Buffer)::
 ****
 
 === 分配内存过程图
-image::02-image/allocate_object_complex.png[]
-
+image::02-image/allocate_object_complex.png[1000,800]
 
 .对象初始化
 ****
@@ -128,15 +100,18 @@ image::02-image/allocate_object_complex.png[]
 
 === 对象头
 
-推荐阅读::
+推荐阅读-对象头和对象::
 https://blog.csdn.net/lkforce/article/details/81128115[]
 
-.32位JVM中Mark Word的存储内容
+.JVM(32位)中Mark Word的存储内容
 image::02-image/object_head_mark_word.jpg[800,600]
+
+'''
 
 .锁的状态变化
 image::02-image/mark_word&lock.png[300,500]
 
+'''
 
 .执行<init>方法,属性赋值
 ****
