--- a/performance-analysis/03-jdk-analysis/doc/01-类加载机制.adoc
+++ b/performance-analysis/03-jdk-analysis/doc/01-类加载机制.adoc
@@ -106,3 +106,19 @@ https://www.cnblogs.com/xrq730/p/11440174.html[]
 不同目录下的jar包的共享与隔离
 
 image::image/01_tomcat_class_loader.png[800,600]
+
+=== 类的卸载
+
+link:..\src\main\java\indi\jdk\yufr\gc\LoadAndUnLoadClass.java[代码描述-LoadAndUnLoadClass.java,window=_blank]
+
+- 该类所有的实例都已经被回收，也就是堆中不存在该类的任何实例。
+- 加载该类的 ClassLoader 已经被回收。
+- 该类对应的 Class 对象没有在任何地方被引用，也就无法在任何地方通过反射访问该类方法。
+
+jvm-option: -Xnoclassgc 禁止类的卸载
+
+[TIP]
+====
+在大量使用反射、动态代理、CGLib 等 ByteCode 框架、动态生成 JSP 以及 OSGi 这类频繁自定义
+ClassLoader 的场景都需要虚拟机具备类卸载功能，以保证不会出现内存溢出。
+====
