--- a/performance-analysis/03-jdk-analysis/doc/01-类加载机制.adoc
+++ b/performance-analysis/03-jdk-analysis/doc/01-类加载机制.adoc
@@ -84,6 +84,11 @@ https://juejin.cn/post/6844903564804882445[]
 
 image::image/01_load_class_process.png[600,400]
 
+符号引用-Symbolic Reference::
+符号引用以一组符号来描述所引用的目标，符号引用可以是任何形式的字面量，符号引用与虚拟机实现的内存布局无关，引用的目标并不一定已经在内存中。
+直接引用-Direct Reference::
+直接引用可以是直接指向目标的指针、相对偏移量或是一个能间接定位到目标的句柄。直接引用是与虚拟机实现的内存布局相关的，同一个符号引用在不同的虚拟机实例上翻译出来的直接引用一般都不相同，如果有了直接引用，那引用的目标必定已经在内存中存在。
+
 .加载阶段
 ****
 相对于类的加载过程的其他阶段，加载阶段是开发期相对来说可控性比较强，该阶段既可以使用系统提供的类加载器完成，也可以由用户自定义的类加载器来完成，开发人员可以通过定义自己的类加载器去控制字节流的获取方式
