--- a/performance-analysis/03-jdk-analysis/doc/02-对象的创建与内存分配.adoc
+++ b/performance-analysis/03-jdk-analysis/doc/02-对象的创建与内存分配.adoc
@@ -84,7 +84,7 @@ TLAB(Thread Local Allocation Buffer)::
 === 分配内存过程图
 image::image/02_allocate_object_complex.png[1000,800]
 
-> 对象无法逃逸,将在栈帧内创建对象
+对象无法逃逸,将在栈帧内创建对象
 栈帧结束,则对象被回收
 
 link:..\src\main\java\indi\jdk\yufr\gc\CanNotEscape.java[代码描述-CanNotEscape.java,window=_blank]
@@ -112,7 +112,7 @@ image::image/02_object_head_mark_word.jpg[800,600]
 
 == 执行<init>方法,属性赋值
 ****
-执行<init>方法，即对象按照程序员的意愿进行初始化。对应到语言层面上讲，就是为属性赋值（注意，这与上面的赋 零值不同，这是由程序员赋的值），和执行构造方法。
+执行<init>方法，即对象按照程序员的意愿进行初始化。对应到语言层面上讲,就是为属性赋值(注意，这与上面的赋零值不同，这是由程序员赋的值),和执行构造方法
 ****
 
 == 压缩指针
